<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:title="@string/save_option"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_option"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_exit"
        android:title="@string/exit_option"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>