<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.todolist.UserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/nameField"
            android:text="@string/user_text_name" />

        <EditText
            style="@style/inputField"
            android:id="@+id/user_name"
            android:inputType="text"/>
        
        <TextView
            style="@style/nameField"
            android:text="@string/user_text_login" />

        <EditText
            style="@style/inputField"
            android:id="@+id/user_login"
            android:inputType="text"/>

        <TextView
            style="@style/nameField"
            android:text="@string/user_text_password" />

        <EditText
            style="@style/inputField"
            android:id="@+id/user_password"
            android:inputType="textPassword"/>

    </LinearLayout>
</ScrollView>
